# printspy-cam

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions-4m.csv  partitions-8m.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
.github/workflows/: build.yml  release.yml
board-configs/: freenove_s3.sdkconfig  nulllab_esp32s3_cam.sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  chip_temp.c  chip_temp.h  http_server.c  http_server.h  idf_component.yml  led.c  led.h  log.c  log.h  main.c  nvs.c  ota.c  ota.h  settings.c  settings.h  version.h  wifi.c  wifi.h  wifi_ap.c  wifi_ap.h
main/boards/: ai_thinker.h  board.h  esp32_s3_eye.h  freenove_s3.h  nulllab_esp32s3_cam.h  xiao_s3_sense.h
web/: admin.html  setup.html
